@@ -2,7 +2,6 @@ package io.github.syst3ms.skriptparser.util;
 
 import java.util.Arrays;
 import java.util.Iterator;
-import java.util.List;
 import java.util.Random;
 import java.util.function.Predicate;
 
@@ -32,26 +31,26 @@ public class CollectionUtils {
 
     @SafeVarargs
     public static <T> boolean contains(T[] array, T... contained) {
-        return List.of(array).containsAll(List.of(contained));
+        return Arrays.asList(array).containsAll(Arrays.asList(contained));
     }
 
     /**
      * Find the index of an item, where a given predicate applies,
-     * from a given class in a list, skipping over all these items
+     * from a given class in an array, skipping over all these items
      * as long as the amount of items skipped is smaller than a given amount.
-     * @param list the list
+     * @param array the array
      * @param n the ordinal you want to get the index from
      * @param condition the condition
      * @return the index, {@code -1} if no index was found
      */
-    public static <T> int ordinalConditionalIndexOf(List<T> list, int n, Predicate<T> condition) {
+    public static <T> int ordinalConditionalIndexOf(T[] array, int n, Predicate<T> condition) {
         int index = 0;
         int findTimes = 0;
         if (n == 0)
             return -1;
-        if (list.isEmpty())
+        if (array.length == 0)
             return -1;
-        for (T o : list) {
+        for (T o : array) {
             if (condition.test(o))
                 findTimes++;
             if (findTimes >= n)
